# arch-bootc

./: .gitignore  .mise.toml  Containerfile  Justfile  README.md  packages.toml  pyproject.toml
.claude/: settings.local.json
rootfs/etc/: starship.toml
rootfs/etc/claude-code/: managed-settings.json
rootfs/etc/profile.d/: hypr-user-dropins.sh  starship.sh
rootfs/etc/ssh/ssh_config.d/: 10-arch-bootc.conf
rootfs/etc/systemd/network/: 20-wired.network
rootfs/usr/lib/bootc/: arch-composefs-setup
rootfs/usr/lib/environment.d/: 90-xdg-config.conf  95-hyprland-config.conf
rootfs/usr/lib/sysusers.d/: onepassword-cli.conf
rootfs/usr/libexec/: arch-bootc-claude-statusline-rate-limits.py  arch-bootc-claude-usage  arch-bootc-codex-usage  arch-bootc-waybar-ai-usage.py  sync-x11-keymap-from-vconsole.sh
rootfs/usr/local/libexec/: build-aur.py  (+1 more)
run/scripts/: build-aur.py  build-aur.sh  pacman-install.sh
scripts/: boot-vm-smoke.sh  boot_vm_smoke.py  build_image.py  generate-vm-artifact.sh  generate_bootable_image.py  generate_vm_artifact.py  host_ops.py  host_upgrade.py  run_all_tests.py  run_bootc.py  run_container_tests.py  run_graphical_vm.py  run_vm_preset.py  with-podman-wrapper.sh  with_podman_wrapper.py
scripts/vm_smoke/: __init__.py  config.py  graphical.py  guest.py  qemu.py  runtime.py  ssh.py
tests/: conftest.py  test_toggle_bluetooth.py
tests/container/: test_hypr_image.py
tests/smoke/: container-hypr.bats  vm-bootc.bats
tests/structure/: hypr-structure.bats
tests/support/: podman.py  ssh.py  vm.py
tests/vm/: test_bootc.py  test_graphical.py
(+29 files in other folders)
